--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@
   --socials: #212A3A;
   --click-drill: #518534;
   --modal-bg: #F4F4F4;
+  --color-bar: #D7DCDE;
+  --green-bar: #00ca74;
 }
 
 /* Global */
@@ -159,6 +161,10 @@ img {
   padding: 9px 26px 9px 49px;
   text-decoration: none;
   color: var(--basic-white);
+}
+
+.active-basket{
+  background-color: var(--basic-red);
 }
 
 .bookmarks:active,
@@ -708,6 +714,7 @@ img {
   font-size: 13px;
   line-height: 24px;
   color: var(--basic-black);
+
 }
 
 .button-toogle {
@@ -822,6 +829,10 @@ img {
 
 .drill-action {
   display: none;
+}
+
+.drill-item:hover{
+  box-shadow: 0 10px 25px rgba(41, 52, 73, .5);
 }
 
 .drill-item:hover .drill-action {
@@ -1368,6 +1379,49 @@ img {
   margin: 0;
 }
 
+.range-controls{
+  position: relative;
+  width: 220px;
+  height: 80px;
+  background-color: var(--special-gray);
+  margin-bottom: 9px;
+}
+
+.scale{
+  margin: 39px 20px 39px 20px;
+  background-color: var(--color-bar);
+  height: 2px;
+}
+.bar{
+  height: 2px;
+  margin: 39px 48px 39px 0px;
+  background-color: var(--green-bar);
+}
+
+.toggle-min{
+  position: absolute;
+    top: 30px;
+    left: 19px;
+    width: 4px;
+    height: 4px;
+    border: 8px solid #fff;
+    background: #ababab;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+.toggle-max{
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  width: 4px;
+  height: 4px;
+  border: 8px solid #fff;
+  background: #ababab;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 .input-class {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -1387,6 +1441,7 @@ img {
 
 
 .filter-item {
+  padding-top: 8px;
 font-size: 15px;
 line-height: 19px;
 text-transform: uppercase;
@@ -1395,6 +1450,7 @@ text-transform: uppercase;
 
 
 .filter-input-checkbox{
+
     position: absolute;
     left: 3px;
     opacity: 0;
@@ -1416,6 +1472,7 @@ text-transform: uppercase;
 .filter-input-radio+label::before{
   content: '';
   display: inline-block;
+  padding-right: 10px;
   width: 25px;
   height: 25px;
   background-image: url("../img/radio-off.svg");
@@ -1436,6 +1493,7 @@ text-transform: uppercase;
 .filter-input-checkbox+label::before {
   content: '';
   display: inline-block;
+  padding-right: 10px;
   width: 25px;
   height: 25px;
   background-image: url("../img/checkbox-off.svg");
@@ -1495,4 +1553,5 @@ line-height: 30px;
 
 .about-item-catalog{
   padding-bottom: 68px;
+  margin: 0;
 }
