--- a/css/style.css
+++ b/css/style.css
@@ -1055,13 +1055,36 @@ img {
 
 /*modal*/
 .modal {
-  position: relative;
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
   width: 620px;
   height: 430px;
   color: var(--basic-black);
   background-color: var(--basic-white);
   border-top: 7px solid #ee3643;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+.modal-map{
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 486px;
+  width: 943px;
+  border-top: 7px solid #ee3643;
+}
+
+.modal-map iframe{
+  border: none;
 }
 
 .modal input,
@@ -1075,6 +1098,7 @@ img {
 }
 
 .feedback-form {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
