--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,9 @@ img {
   padding: 9px 24px 9px 43px;
   text-decoration: none;
   color: var(--basic-white);
+  background: var(--focus-nav);
+  border: 0;
+  outline: 0;
 }
 
 .bookmarks::before {
@@ -174,6 +177,8 @@ img {
   padding: 9px 26px 9px 49px;
   text-decoration: none;
   color: var(--basic-white);
+  border: 0;
+  outline: 0;
 }
 
 .active-basket {
@@ -212,6 +217,8 @@ img {
   padding: 9px 16px 9px 19px;
   color: var(--basic-white);
   background-color: var(--basic-green);
+  border: 0;
+  outline: 0;
 }
 
 .ordering:hover,
@@ -256,6 +263,7 @@ img {
   line-height: 30px;
   border: 3px solid var(--basic-white);
   color: var(--basic-red);
+  background-color: var(--basic-background);
   background-image: url("../img/telephone.svg");
   background-position: center left 39px;
   background-repeat: no-repeat;
@@ -299,6 +307,8 @@ img {
   line-height: 21px;
   background-color: var(--basic-white);
   padding: 12px 57px 12px 56px;
+  border: none;
+  outline: none;
 }
 
 .login-out::before {
@@ -352,10 +362,14 @@ img {
 }
 
 .user-order {
+  border: none;
+  outline: none;
   color: var(--address);
 }
 
 .user-profile {
+  border: none;
+  outline: none;
   color: var(--address);
   margin-left: 28px;
 }
@@ -379,6 +393,8 @@ img {
   padding: 12px 27px 12px 45px;
   background-color: var(--basic-white);
   margin-right: 10px;
+  border: none;
+  outline: none;
 }
 
 .login:hover,
@@ -414,9 +430,10 @@ img {
 }
 
 .register {
-  display: block;
   padding: 12px 24px;
   background-color: var(--basic-white);
+  border: none;
+  outline: none;
 }
 
 .user-navigation a {
@@ -545,6 +562,8 @@ img {
   padding: 10px 0 10px 0;
   background: rgba(255, 255, 255, 0.3);
   color: var(--basic-white);
+  border: none;
+  outline: none;
 }
 
 .catalog-button:hover {
@@ -589,6 +608,26 @@ img {
   outline: none;
 }
 
+.slider-controls {
+  position: absolute;
+  bottom: 36px;
+  left: 50%;
+}
+
+.button-slide {
+  padding: 0;
+  outline: none;
+  background-color: var(--basic-white);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+}
+
+.button-slide-active {
+  background-color: var(--basic-red);
+}
+
 .button-arrow-left {
   left: 21px;
   background-image: url("../img/icon-left.svg");
@@ -603,33 +642,6 @@ img {
 
 .catalog-slide input {
   opacity: 0;
-}
-
-.slider-controls {
-  position: absolute;
-  z-index: 60;
-  bottom: 14%;
-  left: 45%;
-  width: 60px;
-  height: 10px;
-  text-align: center;
-}
-
-.slider-controls label {
-  display: inline-block;
-  width: 6px;
-  height: 6px;
-  margin: 0 5px;
-  vertical-align: top;
-  background: var(--basic-white);
-  border: 2px solid var(--basic-white);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-#btn-1:checked~.slider-controls label[for=btn-1],
-#btn-2:checked~.slider-controls label[for=btn-2] {
-  background: var(--basic-red);
 }
 
 .slide-button-back {
@@ -724,6 +736,9 @@ img {
   padding: 10px 29px 10px 32px;
   margin-bottom: 10px;
   margin-top: auto;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .buy-button::after {
@@ -776,8 +791,17 @@ img {
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 22px;
+  align-items: center;
   color: var(--basic-white);
   background-color: var(--address);
+  min-height: 61px;
+  min-width: 240px;
+  border: none;
+  outline: none;
+  box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
 }
 
 .button-toogle:hover,
@@ -836,6 +860,8 @@ img {
   box-shadow: inset 0px -3px 0px #367315;
   border-radius: 2px;
   text-transform: uppercase;
+  border: none;
+  outline: none;
 }
 
 .buy-drill:hover,
@@ -924,14 +950,8 @@ img {
   background-position: right;
 }
 
-.button-toogle {
-  display: block;
-  padding: 13.5px 0 17.5px 22px;
-  min-width: 240px;
-  box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
-}
-
 .button-list {
+  list-style: none;
   padding: 0;
   margin: 0;
   box-shadow: -14px -1px 10px -7px rgba(0, 0, 0, 0.2) inset;
@@ -971,6 +991,8 @@ img {
 .button-map {
   margin-top: 15px;
   min-width: 300px;
+  border: none;
+  outline: none;
 }
 
 /*Footer*/
@@ -1245,6 +1267,8 @@ img {
 
 .modal-button {
   min-width: 460px;
+  border: none;
+  outline: none;
 }
 
 .modal-button-catalog-list {
@@ -1265,6 +1289,8 @@ img {
   color: var(--basic-black);
   background-color: var(--basic-white);
   margin-left: 10px;
+  border: none;
+  outline: none;
 }
 
 .modal-button-catalog:active {
@@ -1273,37 +1299,17 @@ img {
 }
 
 .modal-close-button {
-  padding: 0;
-  border: none;
-}
-
-.modal-close-button::before {
-  content: '';
   position: absolute;
+  height: 21px;
+  width: 21px;
+  border: none;
+  outline: none;
+  background-color: var(--basic-white);
+  background-image: url("../img/close.svg");
+  background-repeat: no-repeat;
   top: 15px;
   right: 15px;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  width: 20px;
-  height: 5px;
-  background: #ee3643;
-  border: none;
   cursor: pointer;
-}
-
-.modal-close-button::after {
-  content: '';
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  width: 20px;
-  height: 5px;
-  background: #ee3643;
-  border: none;
-  cursor: pointer;
-  transform: rotate(45deg);
 }
 
 .button:hover,
@@ -1322,6 +1328,9 @@ img {
   font-size: 13px;
   line-height: 18px;
   list-style: none;
+  background-color: var(--special-gray);
+  border: 0;
+  outline: 0;
   text-transform: uppercase;
   margin-left: 60px;
   border-bottom: 1px dashed #ee3643;
@@ -1366,6 +1375,7 @@ img {
   border: 1px solid #E5E5E5;
   border-radius: 2px;
   margin-right: 10px;
+  outline: none;
 }
 
 .pagination-button:hover,
@@ -1396,6 +1406,7 @@ img {
   background-color: var(--basic-white);
   border: 1px solid #E5E5E5;
   padding: 10px 80px 10px 78px;
+  outline: none;
 }
 
 /*Catalog main*/
@@ -1412,9 +1423,6 @@ img {
   display: flex;
   flex-direction: row;
   padding: 0;
-  margin: 0;
-  margin-top: 21px;
-  margin-bottom: 20px;
   background-image: url("../img/icon-home.svg");
   background-repeat: no-repeat;
   background-position: left center;
@@ -1440,7 +1448,7 @@ img {
   color: var(--basic-black);
   list-style: none;
   text-transform: uppercase;
-  padding-left: 45px;
+  padding-left: 55px;
 }
 
 .catalog-title::before {
@@ -1450,7 +1458,7 @@ img {
   height: 12px;
   background-image: url("../img/breadcrumb-icon.svg");
   background-repeat: no-repeat;
-  left: 20px;
+  left: 25px;
   top: 2px;
   background-position: 0 0;
 }
@@ -1461,10 +1469,6 @@ img {
 
 .basic-background {
   background-color: var(--basic-background);
-}
-
-.sorting-color {
-  background-color: var(--special-gray);
 }
 
 .drill-title-sotring {
@@ -1492,6 +1496,15 @@ img {
 
 .sorting-button-up {
   margin-right: 21px;
+  border: none;
+  outline: none;
+  background-color: var(--special-gray);
+}
+
+.sorting-button-down {
+  border: none;
+  outline: none;
+  background-color: var(--special-gray);
 }
 
 .filter-title {
@@ -1682,6 +1695,8 @@ img {
   padding: 0;
   margin: 0;
   margin-left: 84px;
+  border: none;
+  outline: none;
 }
 
 .drill-container {
