--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,6 @@ img {
 .search {
   width: 271px;
   border: none;
-  outline: none;
   padding-left: 42px;
   background-color: var(--focus-nav);
   background-image: url("../img/icon-search2.svg");
@@ -147,7 +146,6 @@ img {
   color: var(--basic-white);
   background: var(--focus-nav);
   border: 0;
-  outline: 0;
 }
 
 .bookmarks::before {
@@ -179,7 +177,6 @@ img {
   color: var(--basic-white);
   background: var(--focus-nav);
   border: 0;
-  outline: 0;
 }
 
 .active-basket {
@@ -219,7 +216,6 @@ img {
   color: var(--basic-white);
   background-color: var(--basic-green);
   border: 0;
-  outline: 0;
 }
 
 .ordering:hover,
@@ -594,7 +590,6 @@ img {
   background-color: transparent;
   cursor: pointer;
   border: none;
-  outline: none;
 }
 
 .slider-controls {
@@ -605,7 +600,6 @@ img {
 
 .button-slide {
   padding: 0;
-  outline: none;
   background-color: var(--basic-white);
   border: 2px solid #fff;
   border-radius: 50%;
@@ -630,9 +624,6 @@ img {
   background-repeat: no-repeat;
 }
 
-.catalog-slide input {
-  opacity: 0;
-}
 
 .slide-button-back {
   margin-left: 24px;
@@ -727,7 +718,6 @@ img {
   margin-bottom: 10px;
   margin-top: auto;
   border: none;
-  outline: none;
   cursor: pointer;
 }
 
@@ -790,7 +780,6 @@ img {
   min-height: 61px;
   min-width: 240px;
   border: none;
-  outline: none;
   box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069;
 }
 
@@ -851,7 +840,6 @@ img {
   border-radius: 2px;
   text-transform: uppercase;
   border: none;
-  outline: none;
 }
 
 .buy-drill:hover,
@@ -982,13 +970,11 @@ img {
   margin-top: 15px;
   min-width: 300px;
   border: none;
-  outline: none;
 }
 
 .button-modal-map {
   padding: 0;
   border: none;
-  outline: none;
 }
 
 /*Footer*/
@@ -1167,7 +1153,7 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  height: 486px;
+  min-height: 486px;
   width: 943px;
   border-top: 7px solid #ee3643;
 }
@@ -1178,7 +1164,7 @@ img {
 
 .modal-catalog {
   width: 620px;
-  height: 282px;
+  min-height: 282px;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -1193,7 +1179,7 @@ img {
   flex-direction: column;
   justify-content: space-between;
   width: 620px;
-  height: 282px;
+  min-height: 282px;
   background-color: var(--basic-white);
   border-top: 7px solid var(--basic-red);
   background-image: url("../img/icon-mark.svg");
@@ -1270,7 +1256,6 @@ img {
 .modal-button {
   min-width: 460px;
   border: none;
-  outline: none;
 }
 
 .modal-button-catalog-list {
@@ -1292,7 +1277,6 @@ img {
   background-color: var(--basic-white);
   margin-left: 10px;
   border: none;
-  outline: none;
 }
 
 .modal-button-catalog:active {
@@ -1305,7 +1289,6 @@ img {
   height: 21px;
   width: 21px;
   border: none;
-  outline: none;
   background-color: var(--basic-white);
   background-image: url("../img/close.svg");
   background-repeat: no-repeat;
@@ -1332,7 +1315,6 @@ img {
   list-style: none;
   background-color: var(--special-gray);
   border: 0;
-  outline: 0;
   margin-left: 30px;
   text-transform: uppercase;
   border-bottom: 1px dashed #ee3643;
@@ -1377,7 +1359,6 @@ img {
   border: 1px solid #E5E5E5;
   border-radius: 2px;
   margin-right: 10px;
-  outline: none;
 }
 
 .pagination-button:hover,
@@ -1408,7 +1389,6 @@ img {
   background-color: var(--basic-white);
   border: 1px solid #E5E5E5;
   padding: 10px 80px 10px 78px;
-  outline: none;
 }
 
 /*Catalog main*/
@@ -1499,13 +1479,11 @@ img {
 .sorting-button-up {
   margin-right: 21px;
   border: none;
-  outline: none;
   background-color: var(--special-gray);
 }
 
 .sorting-button-down {
   border: none;
-  outline: none;
   background-color: var(--special-gray);
 }
 
@@ -1606,7 +1584,6 @@ img {
   max-width: 95px;
   text-align: center;
   border: none;
-  outline: none;
   background-color: var(--special-gray);
 }
 
@@ -1698,7 +1675,6 @@ img {
   margin: 0;
   margin-left: 84px;
   border: none;
-  outline: none;
 }
 
 .drill-container {
