--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ img {
   border: 3px solid var(--basic-white);
   color: var(--basic-red);
   background-color: var(--basic-background);
-  background-image: url("../img/telephone.svg");
+  background-image: url("../img/telephone-icon.svg");
   background-position: center left 39px;
   background-repeat: no-repeat;
 }
@@ -907,14 +907,11 @@ img {
 .section-about {
   padding-top: 64px;
   padding-bottom: 99px;
-  background: url("../img/Layer131-1.svg");
+  background: url("../img/layer131-1.svg");
   background-repeat: no-repeat;
   background-position: right bottom;
 }
 
-.section-about h2 {
-  color: var(--address);
-}
 
 .about-item-service {
   padding-bottom: 70px;
